Redirect - manageErrors, window.location.href to re-login page on 401 return. NewBodyProgressForm refactored and working correctly. Located bug - Clicking on autocomplete for bodybio and then progression, and vice-versa...2nd one pressed on would not autocomplete without entering something and then backspacing. It was the closeAllList addEventListener at the end of the file. It was using the event target as document, changed it to App which fixed it.

--- a/app/client/src/App.css
+++ b/app/client/src/App.css
@@ -457,13 +457,13 @@ button.dashboard-new-client , button.dashboard-edit-own-profile {
 }
 /* Enter progress Modal */
 
-.newClientProgress {
+.NewClientProgressForm,  .NewBodyProgressForm {
     width: 450px;
     height: 600px;
     margin: auto;
 }
 
-.newClientProgress .form-group {
+.NewClientProgressForm .form-group, .NewBodyProgressForm .form-group {
     height: 45px;
     margin-bottom: 22px;
 }
